Lighten link color in dark mode (Fix #164)

--- a/src/flavors/mini-dark.scss
+++ b/src/flavors/mini-dark.scss
@@ -34,8 +34,8 @@ $blockquote-cite-size: 0.75em; // Font size for the [cite] of <blockquote>
 $code-font-size: 0.85em; // Font size for <code>, <kbd>
 $sup-top: -0.5em; // <sup> top
 $sub-bottom: -0.25em; // <sub> bottom
-$a-link-color: #0277bd; // Color for <a>:link
-$a-visited-color: #01579b; // Color for <a>:visited
+$a-link-color: #65A0C7; // Color for <a>:link
+$a-visited-color: #3985B7; // Color for <a>:visited
 $bold-font-weight: 700; // Font weight for <b> and <strong>
 $mobile-breakpoint: 768px; // Breakpoint between small and medium screens (px)
 $large-screen-breakpoint: 1280px; // Breakpoint between medium and large screens (px)
